--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "core-js": "^3.6.5",
         "element-plus": "^1.2.0-beta.5",
         "js-file-download": "^0.4.12",
+        "store2": "^2.13.1",
         "vue": "^3.0.0",
         "vue-class-component": "^8.0.0-0",
         "vue-router": "^4.0.0-0",
