--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
         "lint": "vue-cli-service li=nt"
     },
     "dependencies": {
+        "@kangc/v-md-editor": "^2.3.13",
         "axios": "^0.25.0",
+        "babel-plugin-prismjs": "^2.1.0",
         "core-js": "^3.6.5",
         "element-plus": "^1.2.0-beta.5",
+        "highlight.js": "^11.4.0",
         "js-file-download": "^0.4.12",
+        "prismjs": "^1.26.0",
         "store2": "^2.13.1",
         "vue": "^3.0.0",
         "vue-class-component": "^8.0.0-0",
